--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
   "name": "jui2",
-  "version": "0.1.5",
+  "version": "2.0.2",
   "author": "Deddy Lasmono Putro",
   "description": "Javascript User Interface for easier front end development",
   "homepage": "none at the moment",
   "devDependencies": {
     "grunt": "~0.4.4",
-    "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-jshint": "~0.9.2",
-    "grunt-contrib-handlebars": "~0.7.0",
+    "grunt-contrib-compress": "^0.13.0",
+    "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "~0.9.0",
+    "grunt-contrib-handlebars": "~0.7.0",
+    "grunt-contrib-jshint": "~0.9.2",
     "grunt-contrib-less": "~0.10.0",
-    "grunt-jsdoc": "~0.5.4",
+    "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-yuidoc": "~0.5.2",
     "grunt-ftp-deploy": "~0.1.2",
-    "grunt-yui-compressor": "~0.3.3",
-    "grunt-contrib-copy": "~0.5.0"
+    "grunt-github-releaser": "^0.1.18",
+    "grunt-jsdoc": "~0.5.4",
+    "grunt-prompt": "^1.3.0",
+    "grunt-yui-compressor": "~0.3.3"
   }
 }
