--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "homepage": "none at the moment",
   "devDependencies": {
     "grunt": "~0.4.4",
+    "grunt-closure-compiler": "~0.0.21",
     "grunt-contrib-compress": "^0.13.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "~0.9.0",
